# ESPE_2021_NRC_3685

./: .gitignore  README.md
extras/01_04062021_towers_of_hanoi/: .clang-format  CMakeLists.txt  TowersOfHanoi.cbp  TowersOfHanoi.dev  imgui.ini  main.cpp
extras/01_04062021_towers_of_hanoi/include/: application.h  disk.h  rod.h  utils.h
extras/01_04062021_towers_of_hanoi/src/: application.cpp  disk.cpp  main.cpp  rod.cpp
parcial_1/extras/01_04062021_towers_of_hanoi/include/: utils.h
parcial_1/extras/01_04062021_towers_of_hanoi/src/: application.cpp  disk.cpp  main.cpp  rod.cpp
parcial_1/project/: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  database.sqlite  main.cpp
parcial_1/project/docs/: class_diagram.vpp
parcial_1/project/include/: CMakeLists.txt  application.h  controller.h  date.h  linked_list.h  menu_option.h  payment.h  payments_controller.h  person.h  person_builder.h  person_credit.h  persons_controller.h  utils.h
parcial_1/project/include/include/: application.h  controller.h  date.h  menu.h  pch.hpp  utils.h
parcial_1/project/src/: application.cpp  controller.cpp  date.cpp  menu.cpp  payment.cpp  payments_controller.cpp  person.cpp  person_builder.cpp  person_credit.cpp  persons_controller.cpp
parcial_1/project/tests/: CMakeLists.txt  date_test.cpp  input_test.cpp  person_test.cpp
parcial_1/workshops/01_19052021_templates/: application.h  math_template.cbp  math_template.dev  math_template.sln  math_utils.cpp  math_utils.h  numeric_pair.h
parcial_1/workshops/01_19052021_templates/tests/: test_math_utils.cpp
parcial_1/workshops/02_23052021_overloading/functions/: CMakeLists.txt  operation.cpp  operation.h
parcial_1/workshops/02_23052021_overloading/operators/: operators.dev  utils.h
parcial_1/workshops/04_02062021_matrix/: .clang-format  ClassDiagram.cd
parcial_1/workshops/04_02062021_matrix/include/: matrix.h  matrix_utils.h
parcial_1/workshops/04_02062021_matrix/src/: main.cpp
parcial_1/workshops/04_02062021_matrix/tests/: check_matrix_test.cpp
parcial_1/workshops/05_03062021_date_management/: CMakeLists.txt  date_management.vcxproj
parcial_1/workshops/05_03062021_date_management/include/: application.h  date.h
parcial_1/workshops/05_03062021_date_management/tests/: CMakeLists.txt
parcial_1/workshops/06_04062021_matrix_projects/: CMakeLists.txt  application.cpp  main.cpp
parcial_1/workshops/06_04062021_matrix_projects/magic_square/: CuadradoMagico.h
parcial_1/workshops/06_04062021_matrix_projects/pascal_triangle/: operation.h
parcial_1/workshops/06_04062021_matrix_projects/sudoku/: sudoku.cpp
parcial_1/workshops/07_09062021_linked_list/: CMakeLists.txt  LinkedList.sln  LinkedList.vcxproj  double_linked_list.h  linked_list.h  main.cpp  menu.cpp  menu.h  menu_option.cpp  menu_option.h  utils.h
parcial_1/workshops/08_16062021_double_linked_list/: CMakeLists.txt  doubly_linked_list.h  main.cpp  node.h  utils.h
parcial_1/workshops/08_16062021_stack/: CMakeLists.txt  stack.h
parcial_1/workshops/09_16062021_stack/: CMakeLists.txt  doubly_linked_list.h  linked_list.h  main.cpp  menu.cpp  menu.h  menu_option.cpp  menu_option.h  stack.cbp  stack.dev  stack.h  utils.h
parcial_2/01_notations/: CMakeLists.txt  CMakeSettings.json
parcial_2/01_notations/include/: expression.h  notation_parser.h  pch.h  utils.h
parcial_2/01_notations/src/: expression.cpp  main.cpp  menu.cpp  notation_parser.cpp
workshops/01_19052021_templates/: application.cpp  math_template.vcxproj  numeric_pair.cpp
workshops/02_23052021_overloading/functions/: overloading_functions.dev
workshops/02_23052021_overloading/operators/: matrix.cpp  person.h  user.cpp  user.h  vector.cpp
workshops/03_26052021_math_functions/: CMakeLists.txt  application.h
workshops/04_02062021_matrix/: CMakeLists.txt  ClassDiagram.cd  matrix.sln  matrix.vcxproj
workshops/04_02062021_matrix/include/: matrix.h  matrix_utils.h
workshops/04_02062021_matrix/src/: main.cpp  matrix.cpp  matrix_utils.cpp
workshops/05_03062021_date_management/: CMakeLists.txt  ClassDiagram.cd  Makefile.win  application.cpp  application.h  date.cpp  date.h  date_management.cbp  date_management.dev  date_management.layout  date_management.sln  date_management.vcxproj  person.cpp  person.h
workshops/05_03062021_date_management/include/: application.h  date.h  person.h
workshops/05_03062021_date_management/src/: application.cpp  date.cpp  main.cpp  person.cpp
workshops/05_03062021_date_management/tests/: check_date_test.cpp
workshops/06_04062021_matrix_projects/: CMakeLists.txt  application.cpp  main.cpp
workshops/06_04062021_matrix_projects/identity_matrix/: identity_matrix.cpp  identity_matrix.h  matrix.h  matrix_utils.h
workshops/06_04062021_matrix_projects/latin_square/: CMakeLists.txt  latin_square.cpp  latin_square.h  main.cpp  matrix.cpp  matrix.h  matrix_utils.cpp  matrix_utils.h  utils.h
workshops/06_04062021_matrix_projects/magic_square/: CuadradoMagico.cpp
workshops/06_04062021_matrix_projects/pascal_triangle/: CMakeLists.txt  application.cpp  application.h  matrix.cpp  matrix.h  operation.cpp  operation.h
workshops/06_04062021_matrix_projects/sudoku/: sudoku.cpp  sudoku.h
workshops/19052021_templates/: CMakeLists.txt  application.cpp  application.h  main.cpp  math_template.cbp  math_template.dev  math_template.sln  math_template.vcxproj  math_utils.cpp  math_utils.h  numeric_pair.cpp  numeric_pair.h
workshops/19052021_templates/tests/: CMakeLists.txt  test_math_utils.cpp
workshops/23052021_overloading/functions/: CMakeLists.txt  main.cpp  operation.cpp  operation.h  overloading_functions.dev
workshops/23052021_overloading/operators/: CMakeLists.txt  application.cpp  circulo.cpp  circulo.h  main.cpp  matrix.cpp  matrix.h  operators.dev  person.cpp  person.h  user.cpp  user.h  utils.h  vector.h
workshops/26052021_math_functions/: CMakeLists.txt  Taylor.cpp  Taylor.h  application.cpp  main.cpp  math_utils.cpp  math_utils.h
